[project]
name = "bootcamp-python-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipdb>=0.13.13",
    "iterfzf>=1.8.0.62.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "rich>=14.0.0",
    "ty>=0.0.1a14",
    "websockets>=15.0.1",
]
